--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -1,3 +1,4 @@
+
 /* color palette from <https://github.com/vuejs/theme> */
 :root {
   --vt-c-white: #ffffff;
@@ -50,18 +51,17 @@
   }
 }
 
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
+html, body {
   margin: 0;
-  font-weight: normal;
+  padding: 0;
+  width: 100%;
+  height: 100%;
 }
 
 body {
   min-height: 100vh;
-  color: var(--color-text);
-  background: var(--color-background);
+  color: black;
+  background: white;
   transition:
     color 0.5s,
     background-color 0.5s;
@@ -83,4 +83,12 @@ body {
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+a {
+  color: blue;
+}
+
+a:hover {
+  color: darkblue;
 }
