--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,35 +1,45 @@
 @import './base.css';
+@import "tailwindcss";
 
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  font-weight: normal;
+
+.loading {
+    position: relative;
 }
 
-a,
-.green {
-  text-decoration: none;
-  color: hsla(160, 100%, 37%, 1);
-  transition: 0.4s;
-  padding: 3px;
+.loading::before {
+    content: '';
+    display: block;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    width: 70px;
+    height: 70px;
+    margin-left: -35px;
+    margin-top: -35px;
+    border: 6px solid #3b82f6; /* color-brand-1 (синий) */
+    border-left: 6px solid transparent;
+    border-bottom: 6px solid transparent;
+    border-radius: 50%;
+    animation: spin 0.75s infinite linear;
+    z-index: 5;
 }
 
-@media (hover: hover) {
-  a:hover {
-    background-color: hsla(160, 100%, 37%, 0.2);
-  }
+.loading::after {
+    content: "";
+    background-color: rgba(255, 255, 255, 0.5); /* color-light */
+    position: absolute;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    z-index: 4;
 }
 
-@media (min-width: 1024px) {
-  body {
-    display: flex;
-    place-items: center;
-  }
+.loading.loading-dark::after {
+    background-color: rgba(17, 24, 39, 0.5); /* color-dark */
+}
 
-  #app {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding: 0 2rem;
-  }
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
 }
